--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build src/*.html --public-url /parcel-project-template/"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.5"
   },
